--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Magic maze</title>
-    <script src="/vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="/vendors/p5.min.js" charset="utf-8"></script>
-    <script src="js/main.js" charset="utf-8"></script>
+    <script src="js/bundle.js" type="module" charset="utf-8"></script>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-
 </body>
 </html>
