Socket.io for multiplayer! (WIP)

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Magic maze</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+    var socket = io();
+    </script>
     <script src="js/bundle.js" type="module" charset="utf-8"></script>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
