--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <title>Magic maze</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-    var socket = io();
-    </script>
     <script src="js/bundle.js" type="module" charset="utf-8"></script>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+    <div id="ui">
+        <p class="">Il y a <span id="players">0</span></p>
+
+    </div>
+    <div id="canvas-wrap">
+
+    </div>
 </body>
 </html>
