Add clock system!

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div id="ui">
-        <p class="">Il y a <span id="players">0</span></p>
-
+        <p>Il y a <span id="players">0</span></p>
+        <br>
+        <p>Temps restant : <span id="clock">0m 00s</span>.</p>
+        <br>
     </div>
     <div id="canvas-wrap">
 
