--- a/builder/index.html
+++ b/builder/index.html
@@ -2,26 +2,36 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Magic maze | tile builder</title>
+    <title>Magic Maze • Tile Builder</title>
     <script src="../vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
     <script src="../vendors/p5.min.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="/css/main.min.css">
 </head>
 <body>
     <div class="tools-wrap">
         <ul class="tools">
             <li class="selected" data-tool="wall">Wall</li>
+            <li data-tool="wall-orange">Orange wall</li>
             <li data-tool="enter">Enter</li>
             <li data-tool="bridge">Bridge</li>
             <li data-tool="vortex">Vortex</li>
+            <li data-tool="article">Article</li>
+            <li data-tool="exit">Exit</li>
+            <li data-tool="time">Time</li>
+            <li data-tool="escalator">Escal.</li>
         </ul>
         <ul class="colors">
-            <li data-color="green"></li>
+            <li data-color="green" class="selected"></li>
             <li data-color="orange"></li>
             <li data-color="purple"></li>
             <li data-color="yellow"></li>
         </ul>
+    </div>
+    <div class="buttons">
+        <button type="button" name="clear">Clear</button>
+        <button type="button" name="random">Random</button>
+        <button type="button" name="export">Export</button>
     </div>
 </body>
 </html>
