Two cap M in "Magic Maze"

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Magic maze</title>
+    <title>Magic Maze</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/bundle.js" type="module" charset="utf-8"></script>
     <link rel="stylesheet" href="css/main.min.css">
@@ -14,8 +14,6 @@
         <p>Temps restant : <span id="clock">0m 00s</span>.</p>
         <br>
     </div>
-    <div id="canvas-wrap">
-
-    </div>
+    <div id="canvas-wrap"></div>
 </body>
 </html>
