Small UI updates

--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
     <div id="ui">
-        <p>Il y a <span id="players">0</span></p>
-        <br>
+        <p>Il y a <span id="people">1 joueur connecté</span>.</p>
         <p>Temps restant : <span id="clock">0m 00s</span>.</p>
-        <br>
     </div>
     <div id="canvas-wrap"></div>
 </body>
