--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <div id="ui">
         <p>Il y a <span id="people">1 joueur connecté</span>.</p>
         <p>Temps restant : <span id="clock">0m 00s</span>.</p>
+        <p><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectateur</label></p>
+        <div id="admin"></div>
     </div>
     <div id="canvas-wrap"></div>
 </body>
