--- a/builder/index.html
+++ b/builder/index.html
@@ -14,7 +14,7 @@
             <li class="selected" data-tool="wall">Wall</li>
             <li data-tool="wall-orange">Orange wall</li>
             <li data-tool="enter">Enter</li>
-            <li data-tool="bridge">Bridge</li>
+            <li data-tool="gate">gate</li>
             <li data-tool="vortex">Vortex</li>
             <li data-tool="article">Article</li>
             <li data-tool="exit">Exit</li>
