[Builder] Enhanced UI

--- a/builder/index.html
+++ b/builder/index.html
@@ -22,10 +22,10 @@
             <li data-tool="escalator">Escal.</li>
         </ul>
         <ul class="colors">
-            <li data-color="green" class="selected"></li>
-            <li data-color="orange"></li>
-            <li data-color="purple"></li>
-            <li data-color="yellow"></li>
+            <li data-color="green" class="selected" data-shortcut="g"></li>
+            <li data-color="orange" data-shortcut="o"></li>
+            <li data-color="purple" data-shortcut="p"></li>
+            <li data-color="yellow" data-shortcut="y"></li>
         </ul>
     </div>
     <div class="buttons">
