[Builder] Crystal ball and camera items

--- a/builder/index.html
+++ b/builder/index.html
@@ -20,6 +20,8 @@
             <li data-tool="exit">Exit</li>
             <li data-tool="time">Time</li>
             <li data-tool="escalator">Escal.</li>
+            <li data-tool="crystal">Crystal ball</li>
+            <li data-tool="camera">Camera</li>
         </ul>
         <ul class="colors">
             <li data-color="green" class="selected" data-shortcut="g"></li>
