--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="ui">
-        <p>Il y a <span id="people">1 joueur connecté</span>.</p>
-        <p>Temps restant : <span id="clock">0m 00s</span>.</p>
-        <p><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectateur</label></p>
+        <p><span id="people">1 player online</span></p>
+        <p>Time remaining: <span id="clock">- m - - s</span></p>
+        <p><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectator</label></p>
         <div id="admin"></div>
     </div>
     <div id="canvas-wrap"></div>
