--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <div id="ui">
         <p><span id="people">1 player online</span></p>
         <p>Time remaining: <span id="clock">- m - - s</span></p>
-        <p><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectator</label></p>
+        <p id="spectator-ui"><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectator</label></p>
         <div id="admin"></div>
     </div>
     <div id="canvas-wrap"></div>
