--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
         <p><span id="people">1 player online</span></p>
         <p>Time remaining: <span id="clock">- m - - s</span></p>
         <p id="spectator-ui"><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectator</label></p>
+        <p id="roles"></p>
         <div id="admin"></div>
     </div>
     <div id="canvas-wrap"></div>
