--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Magic Maze</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/bundle.js" type="module" charset="utf-8"></script>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
@@ -16,5 +15,6 @@
         <div id="admin"></div>
     </div>
     <div id="canvas-wrap"></div>
+    <script src="js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
