--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Magic Maze</title>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/bundle.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="css/main.min.css">
-</head>
-<body>
-    <div id="ui">
-        <p><span id="people">1 player online</span></p>
-        <p>Time remaining: <span id="clock">- m - - s</span></p>
-        <p id="spectator-ui"><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectator</label></p>
-        <p id="roles"></p>
-        <div id="admin"></div>
-    </div>
-    <div id="canvas-wrap"></div>
-</body>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Magic Maze</title>
+    </head>
+    <body>
+
+    </body>
 </html>
