Change whole environment

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Magic Maze</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/bundle.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="css/main.min.css">
+    <script src="./bundle.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <div id="ui">
