--- a/public/create/index.html
+++ b/public/create/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <title>Magic Maze • Tile Builder</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
-    <script src="./js/main.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="./css/main.min.css">
+    <script src="./bundle.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div class="tools-wrap">
