--- a/public/play/index.html
+++ b/public/play/index.html
@@ -5,7 +5,7 @@
     <title>Magic Maze</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./bundle.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <div id="ui">
