Even more setup

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Magic Maze</title>
+    <link rel="stylesheet" href="/home/main.css">
+    <script src="/home/bundle.js" charset="utf-8"></script>
 </head>
 <body>
     <h1>Magic Maze</h1>
