[WIP] Multiple rooms :tada:

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title>Magic Maze</title>
     <link rel="stylesheet" href="/home/main.css">
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/home/bundle.js" charset="utf-8"></script>
 </head>
 <body>
     <h1>Magic Maze</h1>
+
+    <p id="play">Join room</p>
 </body>
 </html>
