--- a/public/play/index.html
+++ b/public/play/index.html
@@ -11,7 +11,7 @@
     <div id="ui">
         <p><span id="people">1 player online</span></p>
         <p>Time remaining: <span id="clock">- m - - s</span></p>
-        <p id="spectator-ui"><input type="checkbox" name="spectator" id="spectator"><label for="spectator">Spectator</label></p>
+        <p id="spectator-ui"><input type="checkbox" name="isSpectator" id="isSpectator"><label for="isSpectator">Spectator</label></p>
         <p id="roles"></p>
         <div id="admin"></div>
     </div>
