New title on homepage

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -10,7 +10,32 @@
 </head>
 <body>
     <div class="wrap">
-        <h1>Magic Maze</h1>
+        <h1>
+            <span>M</span>
+            <span>a</span>
+            <span>g</span>
+            <span>i</span>
+            <span>c</span>
+            <span>&nbsp;</span>
+            <span>M</span>
+            <span>a</span>
+            <span>z</span>
+            <span>e</span>
+        </h1>
+        <h1 class="shadow">
+            <span>M</span>
+            <span>a</span>
+            <span>g</span>
+            <span>i</span>
+            <span>c</span>
+            <span>&nbsp;</span>
+            <span>M</span>
+            <span>a</span>
+            <span>z</span>
+            <span>e</span>
+        </h1>
+
+        <div class="hr">❖</div>
 
         <div class="row">
             <div class="box">
