Change colors of game UI

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <div id="ui">
-        <p><span id="people">1 player online</span></p>
+        <p><strong id="people">1 player online</strong></p>
         <p>Time remaining: <span id="clock">- m - - s</span></p>
-        <p id="spectator-ui"><input type="checkbox" name="isSpectator" id="isSpectator"><label for="isSpectator">Spectator</label></p>
+        <p id="spectator-ui">
+            <input type="checkbox" name="isSpectator" id="isSpectator">
+            <label for="isSpectator">Spectator</label>
+        </p>
         <p id="roles"></p>
         <div id="admin"></div>
     </div>
