[WIP] Break everything

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -38,9 +38,9 @@
         <div class="hr">❖</div>
 
         <div class="row">
-            <div class="box">
-                <input type="text" placeholder="Name your room…">
-                <button name="create">Create room</button>
+            <div class="box new-game">
+                <p><strong>+</strong></p>
+                <p class="small">Create room</p>
             </div>
         </div>
     </div>
