--- a/public/play/index.html
+++ b/public/play/index.html
@@ -9,15 +9,11 @@
 </head>
 <body>
     <div id="ui">
-        <p>Time remaining: <span id="clock">- m - - s</span></p>
-
         <p><strong id="people">1 player online</strong></p>
-
-        <ul id="list"></ul>
-
+        <p>Time remaining: <span id="clock">- m - - s</span></p>
         <p id="spectator-ui">
-            <!-- <input type="checkbox" name="isSpectator" id="isSpectator">
-            <label for="isSpectator">Spectator</label> -->
+            <input type="checkbox" name="isSpectator" id="isSpectator">
+            <label for="isSpectator">Spectator</label>
         </p>
         <p id="roles"></p>
         <div id="admin"></div>
