Multiple fixes and reworks

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -13,13 +13,15 @@
 
         <p><strong id="people">1 player online</strong></p>
 
-        <ul id="list"></ul>
+        <div id="list"></div>
 
-        <p id="spectator-ui">
-            <!-- <input type="checkbox" name="isSpectator" id="isSpectator">
-            <label for="isSpectator">Spectator</label> -->
-        </p>
         <p id="roles"></p>
+
+        <div id="spectator-ui">
+            <input type="checkbox" name="isSpectator" id="isSpectator">
+            <label for="isSpectator">Spectator</label>
+        </div>
+
         <div id="admin"></div>
     </div>
     <div id="canvas-wrap"></div>
