--- a/public/play/index.html
+++ b/public/play/index.html
@@ -24,6 +24,13 @@
 
         <div id="admin"></div>
     </div>
-    <div id="canvas-wrap"></div>
+    <div id="canvas-wrap">
+        <svg viewBox="0 0 1140 978" xmlns="http://www.w3.org/2000/svg">
+            <g id="svg-wrap">
+                <g id="svg"></g>
+            </g>
+        </svg>
+        <div id="debug"></div>
+    </div>
 </body>
 </html>
