Display tiles and heroes with SVG

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -25,7 +25,7 @@
         <div id="admin"></div>
     </div>
     <div id="canvas-wrap">
-        <svg viewBox="0 0 1140 978" xmlns="http://www.w3.org/2000/svg">
+        <svg id="svg-el" viewBox="0 0 0 0" xmlns="http://www.w3.org/2000/svg">
             <g id="svg-wrap">
                 <g id="svg"></g>
             </g>
