Display path with SVG

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -27,7 +27,11 @@
     <div id="canvas-wrap">
         <svg id="svg-el" viewBox="0 0 0 0" xmlns="http://www.w3.org/2000/svg">
             <g id="svg-wrap">
-                <g id="svg"></g>
+                <g id="svg">
+                    <g id="board"></g>
+                    <g id="path"></g>
+                    <g id="heroes"></g>
+                </g>
             </g>
         </svg>
         <div id="debug"></div>
