Clean up SVG DOM

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -24,13 +24,15 @@
 
         <div id="admin"></div>
     </div>
-    <div id="canvas-wrap">
+    <div id="game-wrap">
         <svg id="svg-el" viewBox="0 0 0 0" xmlns="http://www.w3.org/2000/svg">
             <g id="svg-wrap">
                 <g id="svg">
                     <g id="board"></g>
+                    <g id="tiles"></g>
                     <g id="path"></g>
                     <g id="heroes"></g>
+                    <g id="grid"></g>
                 </g>
             </g>
         </svg>
