--- a/public/play/index.html
+++ b/public/play/index.html
@@ -31,6 +31,7 @@
                     <g id="board"></g>
                     <g id="tiles"></g>
                     <g id="path"></g>
+                    <g id="items"></g>
                     <g id="heroes"></g>
                     <g id="grid"></g>
                 </g>
