Show amount of tiles left. Also, grey out background when all tiles are placed.

--- a/public/play/index.html
+++ b/public/play/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="ui">
         <p>Time remaining: <span id="clock">- m - - s</span></p>
-        
+        <p>Tiles: <span id="tiles-used">0</span>/<span id="tiles-total">0</span></p>
+
         <p><strong id="people">1 player online</strong></p>
 
         <div id="list"></div>
