--- a/public/home/index.html
+++ b/public/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Magic Maze</title>
-    <link rel="stylesheet" href="/home/main.min.css">
+    <!-- <link rel="stylesheet" href="/home/main.min.css"> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/home/bundle.js" charset="utf-8"></script>
