Include link back to GitHub on the main page
Players that just find the site randomly will not be aware that the
project is developed in the open and that their feedback is welcome.
Including a link back to GitHub on the main page should help drive more
traffic and ideas to the project.

Signed-off-by: Remy Suen <remy.suen@gmail.com>

--- a/public/home/index.html
+++ b/public/home/index.html
@@ -37,6 +37,12 @@
 
         <div class="hr">❖</div>
 
+        <div class="banner">
+            Contribute to the development of this project on <a href="https://github.com/ashugeo/magic-maze/">GitHub</a>.
+            <br></br>
+            Open feature requests and bug reports <a href="https://github.com/ashugeo/magic-maze/issues">here</a>! Thank you for your feedback.
+        </div>
+
         <div class="row">
             <div class="box new-game">
                 <p><strong>+</strong></p>
